Updated html and css

--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,21 @@
 
 	<main role="main">
 		<!-- maybe put title name inside container image? -->
-		<div class="container"></div>
+		<!-- <div class="container"></div> -->
 
 		<!-- list of muscles -->
-		<div class="muscles">
-			<div id="muscles-biceps">Biceps</div>
-			<div id="muscles-triceps">Triceps</div>
-			<div id="muscles-chest">Chest</div>
-			<div id="muscles-quads">Quads</div>
-			<div id="muscles-calves">Calves</div>
-			<div id="muscles-traps">Traps</div>
-			<div id="muscles-lats">Lats</div>
-			<div id="muscles-hamstrings">Hamstrings</div>
+		<div class="muscle-groups">
+			<div class="biceps">Biceps</div>
+			<div class="triceps">Triceps</div>
+			<div class="chest">Chest</div>
+			<div class="quads">Quads</div>
+			<div class="calves">Calves</div>
+			<div class="traps">Traps</div>
+			<div class="lats">Lats</div>
+			<div class="hamstrings">Hamstrings</div>
 		</div>
+
+		<div class="deadlift-img"></div>
 	</main>
 
 </body>
