--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header role="banner">	
 		<nav role="navigation">
-			<div class="title">Hello World!</div>
+			<div class="title">Fitbuddy</div>
 
 			<!-- maybe try using <a>? -->
 			<div id="nav-add">Add</div>
