Updated login more

--- a/public/login.html
+++ b/public/login.html
@@ -9,32 +9,33 @@
 </head>
 	
 <body>
+	<div class=login-bg>
+		<div id="login-wrapper">
+			<!-- login header -->
+			<header>
+				<div class="login-heading"> Fitbuddy Login</div>
+			</header>
 
-	<div id="login-wrapper">
-		<!-- login header -->
-		<header>
-			<div class="login-heading"> Fitbuddy Login</div>
-		</header>
+			<main role='main'>
+				<form class="login-form" name="login-form">
+					<!-- username -->
+					<label for="username" class="input-label">
+						<input type="text" id="username" name="username" placeholder="Username">
+					</label><br>
+					<!-- password -->
+					<label for="password" class="input-label">
+						<input type="text" id="password" name="password" placeholder="Password">
+					</label><br>
 
-		<main role='main'>
-			<form class="login-form" name="login-form">
-				<!-- username -->
-				<label for="username" class="input-label">
-					<input type="text" id="username" name="username" placeholder="Username">
-				</label><br>
-				<!-- password -->
-				<label for="password" class="input-label">
-					<input type="text" id="password" name="password" placeholder="Password">
-				</label><br>
-
-				<div class="login-btns">
-					<!-- back button -->
-					<input type="button" name="back-btn" value="Back" class="back-btn" onclick="window.location="index.html">
-					<!-- submit button -->
-					<button type="submit" class="login-btn">Login</button><br>
-				</div>
-			</form>
-		</main>
+					<div class="login-btns">
+						<!-- back button -->
+						<input type="button" name="back-btn" value="Back" class="back-btn-lg" onclick="window.location="index.html">
+						<!-- submit button -->
+						<button type="submit" class="login-btn-lg">Login</button><br>
+					</div>
+				</form>
+			</main>
+		</div>
 	</div>
 </body>
 </html>
