--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 						<!-- register button -->
 						<input type="button" name="register-btn" class="register-btn" value="Register" onclick="window.location="signup.html">
 						<!-- submit button -->
-						<button type="submit" class="login-btn-li">Login</button><br>
+						<button type="submit" class="login-btn">Login</button><br>
 					</div>
 				</form>
 			</main>
