--- a/public/home.html
+++ b/public/home.html
@@ -39,6 +39,6 @@
 
 		<div class="deadlift-img"></div>
 	</main>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
