--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,6 @@
 			</main>
 		</div>
 	</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
