--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 					<div class="login-btns">
 						<!-- register button -->
-						<input type="button" name="register-btn" class="register-btn" value="Register" onclick="window.location="signup.html">
+						<input type="button" name="register-btn" class="register-btn" value="Register" onclick="window.location='/signup.html'">
 						<!-- submit button -->
 						<button type="submit" class="login-btn">Login</button><br>
 					</div>
