fixed back button

--- a/public/signup.html
+++ b/public/signup.html
@@ -33,7 +33,7 @@
 
 					<div class="signup-btns">
 						<!-- back button -->
-						<input type="button" name="back-btn" value="Back" class="back-btn" onclick="window.location='index.html'">
+						<input type="button" name="back-btn" value="Back" class="back-btn" onclick="window.location='/index.html'">
 						<!-- submit button -->
 						<button type="submit" class="submit-btn">Submit</button><br>
 					</div>
