Added login subheading

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 		<div id="login-wrapper">
 			<!-- login header -->
 			<header>
-				<div class="login-heading"> Fitbuddy Login</div>
+				<div class="login-heading">Fitbuddy</div>
+				<div class="login-subheading">Customize your workout</div>
 			</header>
 
 			<main role='main'>
