--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 						<!-- submit button -->
 						<button type="submit" class="login-btn">Login</button><br>
 					</div>
+					<p class="auth-warning"></p>
 				</form>
 			</main>
 		</div>
