--- a/public/signup.html
+++ b/public/signup.html
@@ -28,7 +28,7 @@
 					</label><br>
 					<!-- password -->
 					<label for="password" class="input-label">
-						<input type="text" id="password" name="password" placeholder="Password">
+						<input type="password" id="password" name="password" placeholder="Password">
 					</label><br>
 
 					<div class="signup-btns">
