--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 					</label><br>
 					<!-- password -->
 					<label for="password" class="input-label">
-						<input type="text" id="password" name="password" placeholder="Password">
+						<input type="password" id="password" name="password" placeholder="Password">
 					</label><br>
 
 					<div class="login-btns">
