--- a/public/home.html
+++ b/public/home.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="style.css" rel="stylesheet" type="text/css"/>
-	<link href="grid.css" rel="stylesheet" type="text/css"/>
+	<link type="text/css" rel="stylesheet" href="./grid.css">
+  <link type="text/css" rel="stylesheet" href="./style.css">
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 	<title>Fitbuddy</title>
 </head>
