Testing a href for index.html

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
 					<div class="login-btns">
 						<!-- register button -->
-						<input type="button" name="register-btn" class="register-btn" value="Register" onclick="window.location='/signup.html'">
+						<input type="button" name="register-btn" class="register-btn" value="Register" a href="/signup.html">
 						<!-- submit button -->
 						<button type="submit" class="login-btn">Login</button><br>
 					</div>
