fixed registering users issue

--- a/public/signup.html
+++ b/public/signup.html
@@ -18,9 +18,13 @@
 
 			<main role='main'>
 				<form class="signup-form" name="signup-form">
-					<!-- fullname -->
-					<label for="fullname" class="input-label">
-						<input type="text" id="fullname" name="fullname" placeholder="Full Name">
+					<!-- firstName -->
+					<label for="firstName" class="input-label">
+						<input type="text" id="firstName" name="firstName" placeholder="First Name">
+					</label><br>
+					<!-- lastName -->
+					<label for="lastName" class="input-label">
+						<input type="text" id="lastName" name="lastName" placeholder="Last Name">
 					</label><br>
 					<!-- username -->
 					<label for="username" class="input-label">
