--- a/public/home.html
+++ b/public/home.html
@@ -20,25 +20,19 @@
 			<div id="nav-delete">Delete</div>
 		</nav>
 	</header>
+	<div id="home-wrapper">
+		<main role="main">
+			<!-- maybe put title name inside container image? -->
+			<!-- <div class="container"></div> -->
 
-	<main role="main">
-		<!-- maybe put title name inside container image? -->
-		<!-- <div class="container"></div> -->
+			<!-- list of muscles -->
+			<div class="workoutsContainer">
+				<div class="userWorkouts">Your Workouts</div>
+			</div>
 
-		<!-- list of muscles -->
-		<div class="muscle-groups">
-			<div class="biceps">Biceps</div>
-			<div class="triceps">Triceps</div>
-			<div class="chest">Chest</div>
-			<div class="quads">Quads</div>
-			<div class="calves">Calves</div>
-			<div class="traps">Traps</div>
-			<div class="lats">Lats</div>
-			<div class="hamstrings">Hamstrings</div>
-		</div>
-
-		<div class="deadlift-img"></div>
-	</main>
+			<div class="deadlift-img"></div>
+		</main>
+	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
