--- a/public/signup.html
+++ b/public/signup.html
@@ -40,11 +40,13 @@
 						<input type="button" name="back-btn" value="Back" class="back-btn" onclick="window.location='/index.html'">
 						<!-- submit button -->
 						<button type="submit" class="submit-btn">Submit</button><br>
+						<p class="auth-warning"></p>
 					</div>
 				</form>
 			</main>
 		</div>
 	</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
 </html>
