--- a/public/signup.html
+++ b/public/signup.html
@@ -46,6 +46,8 @@
 			</main>
 		</div>
 	</div>
+<script type="text/javascript" src="./api-calls.js"></script>
+<script type="text/javascript" src="./signup.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
