--- a/public/home.html
+++ b/public/home.html
@@ -6,6 +6,7 @@
 	<link type="text/css" rel="stylesheet" href="./grid.css">
   <link type="text/css" rel="stylesheet" href="./style.css">
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<title>Fitbuddy</title>
 </head>
 
